crates/wdl-analysis/tests/validation/duplicate-param-meta/source.errors
error: task `t` contains a duplicate parameter metadata section
  ┌─ tests/validation/duplicate-param-meta/source.wdl:8:5
  │
6 │     parameter_meta {}
  │     -------------- first parameter metadata section is defined here
7 │ 
8 │     parameter_meta {}
  │     ^^^^^^^^^^^^^^ this parameter metadata section is a duplicate

error: conflicting task name `t`
   ┌─ tests/validation/duplicate-param-meta/source.wdl:14:6
   │
 5 │ task t {
   │      - the task with the conflicting name is here
   ·
14 │ task t {
   │      ^ this task conflicts with a previously used name

error: workflow `w` contains a duplicate parameter metadata section
   ┌─ tests/validation/duplicate-param-meta/source.wdl:25:5
   │
23 │     parameter_meta {}
   │     -------------- first parameter metadata section is defined here
24 │ 
25 │     parameter_meta {}
   │     ^^^^^^^^^^^^^^ this parameter metadata section is a duplicate

error: struct `X` contains a duplicate parameter metadata section
   ┌─ tests/validation/duplicate-param-meta/source.wdl:33:5
   │
31 │     parameter_meta {}
   │     -------------- first parameter metadata section is defined here
32 │ 
33 │     parameter_meta {}
   │     ^^^^^^^^^^^^^^ this parameter metadata section is a duplicate

